--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <div>NFS HEAT</div>
     <div><img src="https://store-images.s-microsoft.com/image/apps.45487.71475369522469696.112bf975-f54d-4d34-b915-6ce0f433ad0e.ecce8e46-6836-4e73-8b90-12bf7eb940f9?q=90&w=480&h=270"></div>
     <div>te sumerge en el emocionante mundo de las carreras callejeras en Palm City. Durante el día, podrás competir en eventos legales y ganar dinero para mejorar tu coche. Pero cuando cae la noche, la ciudad se transforma en un peligroso terreno de juego donde las carreras ilegales son la norma. Enfréntate a una fuerza policial corrupta que busca detenerte a toda costa mientras intentas ascender en la élite de las carreras callejeras. La reputación que ganes por la noche te permitirá desbloquear nuevas y mejores modificaciones para tu vehículo, pero también te convertirá en un objetivo más grande.</div>
-    <div>ROCKET s LEAGUE</div>
+    <div>ROCKET a LEAGUE</div>
     <div><img src="https://www.rocketleague.com/images/keyart/rl_evergreen.jpg"></div>
     <div>es un videojuego que combina la emoción del fútbol con la adrenalina de conducir vehículos propulsados por cohetes. Imagina un partido de fútbol, pero en lugar de jugadores, hay autos que utilizan potentes motores para golpear una enorme pelota y marcar goles. El juego ofrece una experiencia divertida y frenética, con partidos llenos de acrobacias, saltos y choques espectaculares. Tanto si juegas solo como con amigos, Rocket League te garantiza horas de diversión mientras tratas de dominar el campo de juego y llevar a tu equipo a la victoria.</div>
 </body>
